# mev-bot-detector

./: Dockerfile  README.md  docker-compose.yml  env.example  package.json
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: load-test.js
src/: index.js
subgraph/: package.json  schema.graphql  subgraph.yaml
subgraph/abis/: MEVDetector.json
subgraph/src/: mapping.ts
test/: mev-detector.test.js
